Making changes to navbar, colors, and fixed clipping with calendar

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -207,7 +207,7 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: #000000;
   text-decoration: underline;
 }
 a:hover {
